Add new conference entries to conferences.yaml
Added details for new conferences including AI in Health Conference and CHVR Retreat 2026.

--- a/_data/conferences.yaml
+++ b/_data/conferences.yaml
@@ -1,11 +1,16 @@
 conferences:
-  - name: "CoNDA Center Seminar"
-    location: "UNMC DRCI 1005"
-    date: "2026-03-11 12:00pm to 1:00pm CDT"
-    deadline: "N/A"
-    link: "https://events.unmc.edu/event/conda-center-seminar-with-dr-rajesh-miranda-texas-am"
-  - name: "CoNDA Center Colloquium"
+- name: "CoNDA Center Colloquium"
     location: "UNMC DRCI 1002"
     date: "2026-04-01 09:00am CT"
     deadline: "Abstract Due Date: Monday, March 2, 2026"
     link: "https://lp.constantcontactpages.com/ev/reg/3b5yvhx/lp/6f1dfc1d-e1f4-4e3d-ada8-fe6ce1ff046e"
+- name: "AI in Health Conference"
+    location: "UNMC Truhlsen Campus Events Center"
+    date: "2026-04-21 08:00am to 3:15pm CT"
+    deadline: "Abstract Due Date: Friday, February 27, 2026 ; Registration deadline: Tuesday, April 14, 2026." 
+    link: "https://www.unmc.edu/cce/ai-in-health-2026/index.html" 
+- name: "CHVR Retreat 2026"
+    location: "Scott Conference Center"
+    date: "2026-04-18 7:30am to 4:00pm CDT" 
+    deadline: "NA"
+    link: "https://events.unmc.edu/event/4th-annual-chvr-retreat-1788"  
