--- a/_data/conferences.yaml
+++ b/_data/conferences.yaml
@@ -15,3 +15,9 @@
   date: "2026-04-18 7:30am to 4:00pm CDT" 
   deadline: "NA"
   link: "https://events.unmc.edu/event/4th-annual-chvr-retreat-1788"  
+
+- name: "New Update"
+  location: "Scott Conference Center"
+  date: "2026-04-18 7:30am to 4:00pm CDT" 
+  deadline: "NA"
+  link: "https://events.unmc.edu/event/4th-annual-chvr-retreat-1788"  
